--- a/links.html
+++ b/links.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel = "stylesheet" type = "text/css" href = "/html/linksStyling.css"> <!-- change inline styling to CSSfile after edits are made to HTML -->
+
+        <link rel = "stylesheet" type = "text/css" href = "linksStyle.css"> 
         <title>Helpful Links</title>
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="favicon/favicomatic/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="favicon/favicomatic/apple-touch-icon-114x114.png" />
@@ -24,80 +25,83 @@
     <meta name="msapplication-wide310x150logo" content="favicon/favicomatic/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
 
-
     </head>
-    <h4 style="text-align: left;"><a href="index.html">Back</a></h4>
-    <body style="background-color: oldlace; text-align: center;">
-    <h1 style="color: skyblue;"> Here are a bunch of links to helpful TED-Ed talks that further discuss these very pressing issues!</h1> <hr>
-    <img style ="width: 450px; length: 450px;"src="Pictures/women.jpg" alt="Please stand by. Your computer is experiencing some loading issues, refresh the page and retry">
-    <h2 style="color:lightseagreen;">Check these out if you have the time and/or you're interested in learning past what this website offers you!</h2>
-    <p style="color: darkslategray;">
-        This link puts the question out here and discusses the question that at least most of us on this website have thought abot once or twice: is
-        feminism actually that good of a movement? Thsi speaker discusses how <a href="https://www.youtube.com/watch?v=lgIgytWyo_A"> feminsim might
-        actually be underminimg itself</a>, digging a whole further down into itself rather than trying to pull out of the hole with a solution.
-        This sensation comes from the fact that in a sense of trying to find and fight for equality and a sense of power for all women, many
-        individuals become violent verbally and ideologically towards men, whihc undermines the whole movement.
-    </p>
-    <p style="color: darkslategray;">
-        THINK NEW ZEALAND! This link addresses the seemingly taboo but very blatantly obvious fact that few female leaders in the world. Why is
-        this so? What cold we accomplish if more women were in higher positions of authority? All of these are questions that this video touches
-        on, so if you're wodnering how eminsim takes its place in the political world and why it's even more of an important issue to discuss there,
-        then <a href="https://www.youtube.com/watch?v=18uDutylDa4"> this is the video you want to watch</a>. This will prompt you to think about all
-        the decisions that men in politics have taken, and besides the fact that it is seemingly unbalnced to have that many men na room decide
-        what is best for the whole of society, women included, the decisions could be based one way or another, leaving out some groups or thinkng
-        in mind of only a specific group.
-    </p>
-    <p style="color: darkslategray;">
-        This video isn't the typical video that convinces you of becoming a feminist through stats about how many women are being verbally abused
-        in the workplace or the gender gap when it comes to the salaries at seemingy equal jobs, or any of the things most of evryone has heard of
-        before. Instead, this video discusses the <a href="https://www.youtube.com/watch?v=18uDutylDa4">feminist paradox</a> that comes with adopting
-        this very victimzing set of values. This video EXCELLENTLY speaks out to those who are concerned that the aggresssive form of feminism that
-        is currently trending in the world and showing how that, again, will act counterproductive in what was initatlly intended to be a "fight for
-        equality between men and women." This one is definitely a good watch for those who wish to pursue <b>feminsim</b> but also don't want to go
-        overboard with it and eventually become <b>anti-man.</b>
-    </p>
-    <p style="color: darkslategray;">
-        This link is actually very interesting, becasue it addresses the people who don't consider themselves feminists, and asks why. Why is
-        it that you aren't a feminist, and <a href="https://www.youtube.com/watch?v=JLkwuMu9OaA">what is it about your ideologies that makes you
-        against this movement</a>. And finally, is not defining oneself as a feminist really as sexist as modern day society makes it seem? Or
-        is it a more rational way of thinking that isn't selectively victimizng 50% of the world's population over the other?
-    </p>
-    <p style="color: darkslategray;">
-        This last link is one that I feel is the most important one of all. If you don't have time to watch
-        all the rest, this is the one that you want to be watching. In 14short minutes, this speaker will disucss with you
-        <a href="https://www.youtube.com/watch?v=x5mionzBMlA&t=156s"> what feminism really is</a>, and why it's so important for
-        us to actually, fully undertsand what is meant by it when someone calls themselves part of this monumental movement, and leaves
-        us to ponder whether it is actually what we want for the world and future generations.
-    </p>
-    <p style="color: darkslategray;">
-        This link discusses <a href="https://www.youtube.com/watch?v=hg3umXU_qWc"> why <b>everyone should be a feminist</b>
-        </a> and it's definietly worth the watch if you're over the edge about what the commonly used phrase "I'm a
-        feminist" actually means and refers to.
-    </p>
-    <p style="color: darkslategray;">
-            This one is <a href="https://www.youtube.com/watch?v=S6ufvYWTqQ0"> another link about why everyone sould be a feminist.</a>
-            It discusses how feminism is actually equalism, and what that means for everyone in an ideal world.
-    </p>
-    <p style="color: darkslategray;">
-        This link discusses what<a href="https://www.youtube.com/watch?v=hGei_hbF5Sw">"gender equality"<i>actually</i> is
-        </a> and how it's different from the necessarily spoken <i>"feminists."</i>
-    </p>
-    <p style="color: darkslategray;">
-        This third link discusses <a href="https://www.youtube.com/watch?v=3WMuzhQXJoY&t=732s"> the trend that feminists have
-        subconsciously started taking actually is</a> and why feminism necessarily as it is currently seen in the
-        world isn't what it should be, taking a turn into what I like to call <i>toxic feminsim.</i>
-    </p>
-    <p style="color: darkslategray;">
-        This link here is one of my favourites as it discusses <a href="https://www.youtube.com/watch?v=Cetg4gu0oQQ"> toxic masculinity</a>,
-        as issue that is often overlooked when discussing feminism.
-    </p>
-    <p style="color: darkslategray;">
-        This link discusses future generations and <a href="https://www.youtube.com/watch?v=fmG4fkmGPd8">what we should teach children about
-        feminism</a>. Spoken about by a 17 year old writer, this video is touching in all the ways that leaves u wanting to make a change on
-        this Earth.
-    </p>
-    <hr>
-    <p style:"colour:black; font: timesNewRoman; text-align: center;"> All videos are sourced from TEDEd</p>
+    <h4><a href="index.html">Back to Main</a></h4>
+    <body>
+        <h1> Here are a bunch of links to helpful TED-Ed talks that further discuss these very pressing issues!</h1> <hr>
+        <img id="womenPic" src="Pictures/women.jpg" alt="Please stand by. Your computer is experiencing some loading issues, refresh the page and retry">
+        <h2 class="header">Check these out if you have the time and/or you're interested in learning past what this website offers you!</h2>
+        <p>
+            This link puts the question out here and discusses the question that at least most of us on this website have thought abot once or twice: is
+            feminism actually that good of a movement? Thsi speaker discusses how <a href="https://www.youtube.com/watch?v=lgIgytWyo_A"> feminsim might
+            actually be underminimg itself</a>, digging a whole further down into itself rather than trying to pull out of the hole with a solution.
+            This sensation comes from the fact that in a sense of trying to find and fight for equality and a sense of power for all women, many
+            individuals become violent verbally and ideologically towards men, whihc undermines the whole movement.
+        </p>
+        <p>
+            THINK NEW ZEALAND! This link addresses the seemingly taboo but very blatantly obvious fact that few female leaders in the world. Why is
+            this so? What cold we accomplish if more women were in higher positions of authority? All of these are questions that this video touches
+            on, so if you're wodnering how eminsim takes its place in the political world and why it's even more of an important issue to discuss there,
+            then <a href="https://www.youtube.com/watch?v=18uDutylDa4"> this is the video you want to watch</a>. This will prompt you to think about all
+            the decisions that men in politics have taken, and besides the fact that it is seemingly unbalnced to have that many men na room decide
+            what is best for the whole of society, women included, the decisions could be based one way or another, leaving out some groups or thinkng
+            in mind of only a specific group.
+        </p>
+        <p>
+            This video isn't the typical video that convinces you of becoming a feminist through stats about how many women are being verbally abused
+            in the workplace or the gender gap when it comes to the salaries at seemingy equal jobs, or any of the things most of evryone has heard of
+            before. Instead, this video discusses the <a href="https://www.youtube.com/watch?v=18uDutylDa4">feminist paradox</a> that comes with adopting
+            this very victimzing set of values. This video EXCELLENTLY speaks out to those who are concerned that the aggresssive form of feminism that
+            is currently trending in the world and showing how that, again, will act counterproductive in what was initatlly intended to be a "fight for
+            equality between men and women." This one is definitely a good watch for those who wish to pursue <b>feminsim</b> but also don't want to go
+            overboard with it and eventually become <b>anti-man.</b>
+        </p>
+        <p>
+            This link is actually very interesting, becasue it addresses the people who don't consider themselves feminists, and asks why. Why is
+            it that you aren't a feminist, and <a href="https://www.youtube.com/watch?v=JLkwuMu9OaA">what is it about your ideologies that makes you
+            against this movement</a>. And finally, is not defining oneself as a feminist really as sexist as modern day society makes it seem? Or
+            is it a more rational way of thinking that isn't selectively victimizng 50% of the world's population over the other?
+        </p>
+        <p>
+            This last link is one that I feel is the most important one of all. If you don't have time to watch
+            all the rest, this is the one that you want to be watching. In 14short minutes, this speaker will disucss with you
+            <a href="https://www.youtube.com/watch?v=x5mionzBMlA&t=156s"> what feminism really is</a>, and why it's so important for
+            us to actually, fully undertsand what is meant by it when someone calls themselves part of this monumental movement, and leaves
+            us to ponder whether it is actually what we want for the world and future generations.
+        </p>
+        <p>
+            This link discusses <a href="https://www.youtube.com/watch?v=hg3umXU_qWc"> why <b>everyone should be a feminist</b>
+            </a> and it's definietly worth the watch if you're over the edge about what the commonly used phrase "I'm a
+            feminist" actually means and refers to.
+        </p>
+        <p>
+                This one is <a href="https://www.youtube.com/watch?v=S6ufvYWTqQ0"> another link about why everyone sould be a feminist.</a>
+                It discusses how feminism is actually equalism, and what that means for everyone in an ideal world.
+        </p>
+        <p>
+            This link discusses what<a href="https://www.youtube.com/watch?v=hGei_hbF5Sw">"gender equality"<i>actually</i> is
+            </a> and how it's different from the necessarily spoken <i>"feminists."</i>
+        </p>
+        <p>
+            This third link discusses <a href="https://www.youtube.com/watch?v=3WMuzhQXJoY&t=732s"> the trend that feminists have
+            subconsciously started taking actually is</a> and why feminism necessarily as it is currently seen in the
+            world isn't what it should be, taking a turn into what I like to call <i>toxic feminsim.</i>
+        </p>
+        <p>
+            This link here is one of my favourites as it discusses <a href="https://www.youtube.com/watch?v=Cetg4gu0oQQ"> toxic masculinity</a>,
+            as issue that is often overlooked when discussing feminism.
+        </p>
+        <p>
+            This link discusses future generations and <a href="https://www.youtube.com/watch?v=fmG4fkmGPd8">what we should teach children about
+            feminism</a>. Spoken about by a 17 year old writer, this video is touching in all the ways that leaves u wanting to make a change on
+            this Earth.
+        </p>
+        <hr>
     </body>
-<img style="width: 50px; length: 50px;"src="Pictures/ted.jpg" alt="Loading error, please stand by and check connection">
+
+        <footer>
+            <p id ="Footer_tag"> All videos are sourced from TEDEd</p>
+            <img id="Footer_pic" src="Pictures/ted.jpg" alt="Loading error, please stand by and check connection">
+        </footer>
+        
 </html>
