--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
                 <article>
                     <div class="article-image"style="background:url(HTML.jpg)"> </div>
                     <h3>Masculinity</h3>
+                    <p class="article-info">Where I think men should stand on the topic of feminism, and how masculinity should be addressed, <a href="masculinity.html">Read more </a></p>
                 </article>
             </section>
-                    </main>
-              <footer> &copy; Lujaina Eldelebshany 2021</footer>
+         </main>
+         <footer> &copy; Lujaina Eldelebshany 2021</footer>
     </body>
 </html>
 
