--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </article>
                 
                 <article>
-                    <div class="article-image"style="background:url(HTML.jpg)"> </div>
+                    <div class="article-image"style="background:url(masculinity-coverpage.jfif)"> </div>
                     <h3>Masculinity</h3>
                     <p class="article-info">Where I think men should stand on the topic of feminism, and how masculinity should be addressed, <a href="masculinity.html">Read more </a></p>
                 </article>
