--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     </head>
-    <body style="font-family: 'Times New Roman', cursive; text-align: center; font-family: Times New Roman; background-image: url('Pictures/backdrop.jpg'); background-repeat: no-repeat; background-position: center center; background-size: cover; background-attachment: fixed;">
+    <body>
 
 
         <h1 style="color: #fdc4c4; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
