--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <body>
 
 
-        <h1 style="color: #fdc4c4; font-family: 'Akaya Kanadaka', cursive;">Gender Setbacks</h1> <hr> <hr>
+        <h1 id="site-title">Gender Setbacks</h1> <hr> <hr>
         <div class="alert alert-primary" role="alert">Thank you for coming, please feel free to explore!</div>
         <main>
             <section>
-             <h2> A blog intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
-             <h3 style="color: #3b3b3b;"><b>I wanted to launch this blog mainly because in a world where everything is happening so quickly and
+             <h2> A website intended to bridge the gap between ignorance and victimizing to shine light on pressing issue of gender norms and reality</h2><hr>
+             <h3 id="site-subtitle"><b>In a world where everything is happening so quickly and
              improper behviour is often overlooked at a time like this, I wanted to bring together accounts and research of
              female empowerment to push forth the delving into important topics surrounding the treatment of women, sexual harassment,
              female empowerment in the workspace to really show just how beneficial it is to society to shatter the stereotypes regarding
