--- a/founder.html
+++ b/founder.html
@@ -50,7 +50,7 @@ breaking stereotypes around women. </h3>
 <section>
 <h2>A Bit about Myself Personally</h2>
 <p><i>
-    <ul>
+    <ul id="descriptors">
         <li>Small person with big dreams </li>
         <li>Incoming Engineering student at the <b>University of Calgary</b></li>
         <li>Enjoys baking and playing card games </li>
