--- a/gendernorms.html
+++ b/gendernorms.html
@@ -2,15 +2,20 @@
 <html lang="en">
     <head>
         <title>gendernorms</title>
-        <style>
             <link rel="stylesheet" type="text/css" href="gendernormsStyle.css"/>
-        </style>   
     </head>
     
-    
-    <!--  Will be styled later due to the navbar -->
-    <h4 style="text-align: left;"><a href="index.html">Back to Main </a></h4>
-
+    <div class="topnav" id="myTopnav">
+        <a href="gendernorms.html" class="active">Gerndernorms</a>
+        <a href="index.html">Main</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="links.html">Links</a>
+        <a href="founder.html">Writer</a>
+        <a href="masculinity.html">Masculinity</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div> 
     <body>
         <h1 id="pageTitle">GENDER NORMS-ANCIENT INEQUALITY</h1>
             <img id="photoID" src="Pictures/ballerina.jpg" alt="Please stand by and restart the page while you experience this error.">
