--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
         <meta name="msapplication-wide310x150logo" content="favicon/favicomatic/mstile-310x150.png" />
         <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
 
-
     </head>
     <body>
-
 
         <h1 id="site-title">Gender Setbacks</h1> <hr> <hr>
         <div class="alert alert-primary" role="alert">Thank you for coming, please feel free to explore!</div>
@@ -52,15 +50,15 @@
 
             <section id="top-stories">
                 <article>
-                    <div class="article-image"style="background:url(Pictures/links-coverpage.jpg)"> </div>
-                    <h3>A Collection of Exterior Links</h3>
-                    <p class="article-info"> To fither expand knowledge, I have supplied several links on the topics discussed here... <a href="links.html">Read more </a></p>
-                </article>
-
-                <article>
                     <div class="article-image"style="background:url(Pictures/founder-coverpage.jfif)"> </div>
                     <h3>About Me</h3>
                     <p class="article-info"> Behind the code. I use this page to introduce and talk about myself... <a href="founder.html">Read more </a></p>
+                </article>
+
+                <article>
+                    <div class="article-image"style="background:url(Pictures/links-coverpage.jpg)"> </div>
+                    <h3>Exterior Links</h3>
+                    <p class="article-info"> More links because I can't fit everything here.... <a href="links.html">Read more </a></p>
                 </article>
 
                 <article>
@@ -70,13 +68,13 @@
                 </article>
 
                 <article>
-                    <div class="article-image"style="background:url(gallery-coverpage.jfif)"> </div>
+                    <div class="article-image"style="background:url(Pictures/gallery-coverpage.jfif)"> </div>
                     <h3>Gallery</h3>
                     <p class="article-info"> Some really cool women destorying the STEM fields, you know, for inspiration... <a href="gallery.html">Read more </a></p>
                 </article>
                 
                 <article>
-                    <div class="article-image"style="background:url(masculinity-coverpage.jfif)"> </div>
+                    <div class="article-image"style="background:url(Pictures/masculinity-coverpage.jfif)"> </div>
                     <h3>Masculinity</h3>
                     <p class="article-info">Where I think men should stand on the topic of feminism, and how masculinity should be addressed, <a href="masculinity.html">Read more </a></p>
                 </article>
