--- a/masculinity.html
+++ b/masculinity.html
@@ -25,9 +25,17 @@
         <meta name="msapplication-square310x310logo" content="favicon/favicomatic/mstile-310x310.png" />
 
     </head>
-    <!-- Temporary inline styling. Will become navbar. -->
-    <h4 style="text-align: left;"><a href="index.html">Back to Main</a></h4>
-    
+    <div class="topnav" id="myTopnav">
+        <a href="masculinity.html" class="active">Masculinity</a>
+        <a href="index.html">Main</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="links.html">Links</a>
+        <a href="gendernorms.html">Gerndernorms</a>
+        <a href="founder.html">Writer</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div> 
     
     <body>
         <h1 id="title">TOXIC MASCULINITY</h1>
